<resources>
    <string name="app_name">Route Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_recent">Recent</string>
    <string name="title_map">Map</string>
    <string name="title_weather">Weather</string>
    <string name="title_settings">Settings</string>
    <string name="title_source">Source Code</string>
    <string name="menu_github">Github</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoid2VsYnltIiwiYSI6ImNrOHhmZ2cyZzBqanEzbXJ6b3BpaHhicHIifQ.5osNmEEJ_7PkwM5ADpkayg</string>
    <string name="weather_access_token" translatable="false">9c10a1e4adceb47b5e8e59db6ab4a1c2</string>
    <string name="new_location">Lat: % Lon: %</string>
    <string name="ApiError">That didn\'t work!</string>
    <string name="fahren">° F</string>
    <string name="pick_accent">Pick Accent Color</string>
    <string name="tracking_start">Started tracking</string>
    <string name="tracking_stop">Stopped tracking</string>
    <string name="notification_title">Tracking route</string>
    <string name="notification_text">Tap to open app</string>
    <string name="landmark_button_description">Add landmark</string>
    <string name="tracking_button_description">Start/Stop tracking</string>
    <string name="recorded_landmark">Recorded Landmark</string>
</resources>
