<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_recent"
        android:name="com.example.routetracker.ui.recent.RecentFragment"
        android:label="@string/title_recent"
        tools:layout="@layout/fragment_recent" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.routetracker.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.routetracker.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>